Phase 4: update cloudflare deployment name

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,12 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "svelte-onlinettt"
+name = "svelte-online-ttt"
 compatibility_date = "2024-05-15"
 pages_build_output_dir = "dist"
 
-[durable_objects]
-bindings = [
-    { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer" }
-]
+# Note: For Pages with Durable Objects, you'll need to deploy the DO as a separate Worker first
+# Then reference it here. For now, let's remove the DO binding and KV only.
 
-[[durable_objects.migrations]]
-tag = "v1"
-new_classes = ["WebSocketHibernationServer"]
-
-[env.development]
+[env.preview]
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "2ed8441b10cd4ca59cfeaa3081b4b7d1" }
 ]
@@ -21,3 +15,10 @@ kv_namespaces = [
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "da8a29a1985a49de9be56c5d41188229" }
 ]
+
+# Durable Objects for Pages require a separate Worker deployment
+# We'll need to deploy the WebSocket server as a Worker first, then bind to it
+# [durable_objects]
+# bindings = [
+#     { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer", script_name = "websocket-worker" }
+# ]
