--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,9 +3,6 @@ name = "svelte-online-ttt"
 compatibility_date = "2024-05-15"
 pages_build_output_dir = "dist"
 
-# Note: For Pages with Durable Objects, you'll need to deploy the DO as a separate Worker first
-# Then reference it here. For now, let's remove the DO binding and KV only.
-
 [env.preview]
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "2ed8441b10cd4ca59cfeaa3081b4b7d1" }
@@ -16,9 +13,11 @@ kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "da8a29a1985a49de9be56c5d41188229" }
 ]
 
-# Durable Objects for Pages require a separate Worker deployment
-# We'll need to deploy the WebSocket server as a Worker first, then bind to it
-# [durable_objects]
-# bindings = [
-#     { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer", script_name = "websocket-worker" }
-# ]
+# For local development with wrangler dev
+[[services]]
+binding = "WEBSOCKET_SERVICE"
+service = "svelte-ttt-websocket"
+
+# For production deployment
+[env.production.services]
+WEBSOCKET_SERVICE = { service = "svelte-ttt-websocket" }
