Phase 5: simplify dev setup
Still need to use polling when running locally.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,12 @@ pages_build_output_dir = "dist"
 # Add nodejs compatibility for SvelteKit
 compatibility_flags = ["nodejs_compat"]
 
+# Add this section for local development
+[[services]]
+binding = "WEBSOCKET_HIBERNATION_SERVER"
+service = "svelte-ttt-websocket"
+environment = "production"
+
 [env.preview]
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "2ed8441b10cd4ca59cfeaa3081b4b7d1" }
