--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,18 +12,18 @@ kv_namespaces = [
 ]
 
 # Add services to preview environment (using production WebSocket worker)
-[[env.preview.services]]
+[[env.preview.durable_objects]]
 binding = "WEBSOCKET_HIBERNATION_SERVER"
-service = "svelte-ttt-websocket"
-environment = "production"
+name = "WebSocketHibernationServer"
+script_name = "svelte-ttt-websocket"
 
 [env.production]
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "da8a29a1985a49de9be56c5d41188229" }
 ]
 
-# Add services to production environment
-[[env.production.services]]
+# FIXED: Change from services to durable_objects
+[[env.production.durable_objects]]
 binding = "WEBSOCKET_HIBERNATION_SERVER"
-service = "svelte-ttt-websocket"
-environment = "production"
+name = "WebSocketHibernationServer"
+script_name = "svelte-ttt-websocket"
