--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,12 +13,17 @@ kv_namespaces = [
 
 # Add services to preview environment (using production WebSocket worker)
 [env.preview.durable_objects]
-WEBSOCKET_HIBERNATION_SERVER = { class_name = "WebSocketHibernationServer", script_name = "svelte-ttt-websocket" }
+bindings = [
+    { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer", script_name = "svelte-ttt-websocket" }
+]
 
 [env.production]
 kv_namespaces = [
     { binding = "TTT_GAME_KV", id = "da8a29a1985a49de9be56c5d41188229" }
 ]
 
+
 [env.production.durable_objects]
-WEBSOCKET_HIBERNATION_SERVER = { class_name = "WebSocketHibernationServer", script_name = "svelte-ttt-websocket" }
+bindings = [
+    { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer", script_name = "svelte-ttt-websocket" }
+]
