--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
+  "printWidth": 120,
   "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "none",
-  "printWidth": 120,
+  "semi": true,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "avoid",
+  "singleAttributePerLine": false,
+  "insertFinalNewline": true,
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
   "overrides": [
     {
