--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "test:unit": "vitest",
-    "test": "npm run test:integration && npm run test:unit",
+    "test": "vitest",
     "test-e2e": "npm run test:unit -- --run && npm run test:e2e",
     "test:e2e": "playwright test",
     "deploy": "npm run build && wrangler pages deploy dist",
