--- a/websocket-worker/wrangler.toml
+++ b/websocket-worker/wrangler.toml
@@ -1,13 +1,21 @@
 name = "svelte-ttt-websocket"
 main = "src/index.ts"
 compatibility_date = "2024-05-15"
+compatibility_flags = ["nodejs_compat"]
 
-[durable_objects]
-bindings = [
-    { name = "WEBSOCKET_HIBERNATION_SERVER", class_name = "WebSocketHibernationServer" }
-]
+# Enable ES Module format (required for Durable Objects)
+[build]
+command = ""
 
-# For free plan, use new_sqlite_classes instead of new_classes
-[[migrations]]
-tag = "v1"
-new_sqlite_classes = ["WebSocketHibernationServer"]
+# Durable Objects configuration
+[[durable_objects.bindings]]
+name = "WEBSOCKET_HIBERNATION_SERVER"
+class_name = "WebSocketHibernationServer"
+
+# Local development
+[env.development]
+vars = { ENVIRONMENT = "development" }
+
+# Production environment
+[env.production]
+vars = { ENVIRONMENT = "production" }
